<resources>
    <string name="app_name">موزیک باز</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>


    <string name="iran_music">ایرانی</string>
    <string name="abroad_music">بی کلام</string>
    <string name="clip_music">کلیپ</string>
    <string name="news_music">اخبار</string>

    <!--Adapter-->

    <string name="nSinger">خواننده:</string>
    <string name="nAlbum">آلبوم:</string>

    <!--menu-->

    <string name="menu_setting">تنظیمات</string>
    <string name="menu_About_me">در باره ما</string>
    <string name="menu_another_app">سایر برنامه ها</string>
    <string name="menu_exit">خروج از برنامه</string>

    <string name="menu_new">مرتب سازی براساس جدیدترین ها</string>
    <string name="menu_top_like">مرتب سازی براساس بالاترین امتیاز</string>
    <string name="menu_top_visit">مرتب سازی براساس بیشترین بازدید</string>

    <string name="menu_music_irani">موزیک ایرانی</string>
    <string name="menu_music_khareji">موزیک خارجی</string>
    <string name="menu_clip">کلیپ</string>
    <string name="menu_news">اخبار</string>

    <string name="menu_favorite">آهنگهای برگزیده</string>
    <string name="menu_connect_us">تماس با ما</string>

    <!--SETTING-->

    <string name="screen_light">تنظیم روشنایی صفحه</string>
    <string name="screen_light_on">از این پس در زمان استفاده برنامه صفحه نمایش روشن باقی می ماند</string>
    <string name="screen_light_off">برای جلوگیری از مصرف باتری روشن ماندن صفحه به صورت اتومات تنضیم می شود</string>

    <string name="dialog_title_aboutMe">درباره ما</string>
    <string name="dialog_message_aboutMe">این برنامه توسط گروه برنامه نویسی کاردان اپ ساخته شده است</string>
    <string name="dialog_title_another_app">سایر برنامه های ما</string>
    <string name="dialog_message_another_app">برای دیدن سایر برنامه های ما می توانید لز لینک زیر استفاده کنید</string>

    <!--search-->
    <string name="search">جستوجو</string>
    <string name="search_hint">نام خواننده را وارد کنید</string>
    <string name="search_by">جستجو بر اساس</string>


    <!--setting-->
    <string name="setting_screen_light">تنظیمات روشنایی صفحه نمایش</string>
    <string name="setting_text_light">روشن ماندن صفحه نمایش</string>
    <string name="setting_text_font_light">تنظیمات فونت</string>
    <string name="setting_sample_font">متن نمونه</string>


    <!--call_us-->
    <string name="call_email">ایمیل</string>
    <string name="call_email_hint">لطفا ایمیل خود را وارد کنید</string>
    <string name="call_name">نام</string>
    <string name="call_name_hint">لطفا نام خود را وارد کنید</string>
    <string name="call_text">متن</string>
    <string name="call_text_hint">لطفا متن خود را وارد کنید</string>
    <string name="call_send">ارسال</string>
    <string name="call_cat">دسته بندی</string>
    <string name="call_toolbar">تماس باما</string>


    <!--error-->

    <string name="error_connect">متاسفانه ارتباط با سرور برقرار نشد</string>
    <string name="error_down_image">متاسفانه مشکلی در دریافت عکس ها ازسمت سرور به وجود آمده !</string>
    <string name="error_connect_internet">عدم اتصال به اینترنت ! </string>
    <string name="wifi">وای فای</string>
    <string name="refresh">تلاش مجدد</string>
    <string name="download">دانلود</string>
    <string name="error_get_pic">خطا هنگام دریافت عکس</string>


    <!--favorite-->
    <string name="favorite_nothing">هنوز موردی به علاقه مندی ها اضافه نشده !</string>
    <string name="search_nothing">برای جستجو برروی آیکن سرچ کلیک کنید</string>
    <string name="search_nothing2">هیچی یافت نشد !</string>


    <!--info-->
    <string name="info">اطلاعیه</string>
    <string name="refreshAgain">تلاش مجدد</string>

    <string name="list_download">آهنگ های دانلود شده</string>


</resources>
