<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_rcv_background"
    android:orientation="vertical"
    tools:context="book.course.molareza.ir.mp3player.activity.ActivityCall">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtEmailCall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight=".8"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/nav_drawer_text2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/call_email"
            android:textColor="@color/cardView_share"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtNameCall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight=".8"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/nav_drawer_text2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/call_name"
            android:textColor="@color/cardView_share"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">


        <Spinner
            android:id="@+id/spinnerCall"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_weight=".8"
            android:spinnerMode="dropdown"
            android:background="@android:drawable/spinner_dropdown_background"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/call_cat"
            android:textColor="@color/cardView_share"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight=".8"
            android:background="@drawable/border"
            android:ems="10"
            android:inputType="text"
            android:minHeight="200dp"
            android:padding="10dp"
            android:textColor="@color/cardView_share"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="top|center_horizontal"
            android:text="@string/call_text"
            android:textColor="@color/cardView_share"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/cardView_share"
        android:text="@string/call_send"
        android:textColor="@color/main_rcv_background"
        android:textSize="20sp" />


</LinearLayout>
