<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="book.course.molareza.ir.mp3player.activity.ActivityInternet"
    android:background="@color/main_rcv_background">


    <ImageView
        android:tint="@color/cardView_visit"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@+id/txtInfoInternet"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/report"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/txtInfoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/error_connect_internet"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/cardView_text_color_nAlbum"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/txtInfoInternet"
        android:gravity="center"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="50dp"
            android:id="@+id/layoutRefresh">
            <ImageView
                android:tint="@color/cardView_visit"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/refresh"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/cardView_text_color_nAlbum"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layoutWify">
            <ImageView
                android:tint="@color/cardView_visit"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/wifi"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/cardView_text_color_nAlbum"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
