<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_rcv_background"
    android:orientation="vertical"
    tools:context="book.course.molareza.ir.mp3player.activity.ActivitySearch">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinnerTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/search_by"
            android:textColor="@color/cardView_share"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight=".3"
            android:background="@color/cardView_background"
            android:text="@string/search"
            android:textColor="@color/tab_text_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight=".7"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:textColor="@color/cardView_text_color_nAlbum"
            android:textColorHint="@color/cardView_text_color_nAlbum" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcvContentSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />

        <ProgressBar
            android:id="@+id/prgSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="false" />

    </RelativeLayout>
</LinearLayout>
