<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:background="@color/nav_background"
    android:orientation="vertical"
    tools:context=".fragment.FragNavEnd">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@mipmap/ninja" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:src="@mipmap/img4"
            app:civ_border_color="@color/cardView_border"
            app:civ_border_width="2dp" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp">


            <LinearLayout
                android:id="@+id/ltFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >


                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/nav_background"
                    android:text="@string/menu_favorite"
                    android:textColor="@color/nav_drawer_text1"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_favorite_black_48dp"
                    android:tint="@color/nav_drawer_text1" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ltSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/nav_background"
                    android:text="@string/menu_irani"
                    android:textColor="@color/nav_drawer_text2"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/setting"
                    android:tint="@color/nav_drawer_text2" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ltDialogAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/nav_background"
                    android:text="@string/dialog_title_aboutMe"
                    android:textColor="@color/nav_drawer_text3"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/about_me"
                    android:tint="@color/nav_drawer_text3" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ltDialogAnother"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/nav_background"
                    android:text="@string/dialog_title_another_app"
                    android:textColor="@color/nav_drawer_text4"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/another"
                    android:tint="@color/nav_drawer_text4" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ltCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/nav_background"
                    android:text="@string/menu_connect_us"
                    android:textColor="@color/nav_drawer_text2"
                    android:textSize="17sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_phone"
                    android:tint="@color/nav_drawer_text2" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
